// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementPage renders engagement report page with data 1`] = `
<Page
  empty={Object {}}
  title="Engagement Report"
>
  <withRouter(Connect(EngagementFilters))
    disabled={false}
    onLoad={[Function]}
  />
  <Panel
    sectioned={true}
  >
    <LoadableComponent
      accepted={1}
      clicks={3}
      opens={4}
      targeted={2}
    />
  </Panel>
</Page>
`;

exports[`EngagementPage renders loading panel 1`] = `
<Page
  empty={Object {}}
  title="Engagement Report"
>
  <withRouter(Connect(EngagementFilters))
    disabled={true}
    onLoad={[Function]}
  />
  <PanelLoading />
</Page>
`;
